--- a/portfolio.html
+++ b/portfolio.html
@@ -27,28 +27,32 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a href="./index.html" class="logo"
-            ><span class="web">Web</span><span class="studio">Studio</span>
+          <a href="./index.html" class="logo header__logo"
+            ><span class="logo__web">Web</span><span class="logo__studio">Studio</span>
           </a>
 
           <ul class="site-nav list">
-            <li class="nav-item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li class="nav-item"><a href="" class="link">Контакты</a></li>
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link link">Студия</a>
+            </li>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link link current">Портфолио</a>
+            </li>
+            <li class="site-nav__item"><a href="" class="site-nav__link link">Контакты</a></li>
           </ul>
         </nav>
 
-        <ul class="contacts-list list">
-          <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-link link">
-              <svg class="contact-icon" width="16" height="12">
+        <ul class="contacts list">
+          <li class="contacts__item">
+            <a href="mailto:info@devstudio.com" class="contacts__link link">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icon/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
-            <a href="tel:+380961111111" class="contact-link link"
-              ><svg class="contact-icon" width="10" height="16">
+          <li class="contacts__item">
+            <a href="tel:+380961111111" class="contacts__link link"
+              ><svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icon/symbol-defs.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -230,51 +234,55 @@
         <div class="contacts-bottom">
           <h2 class="visually-hidden">адрес</h2>
           <a href="./index.html" class="logo"
-            ><span class="web">Web</span><span class="studio">Studio</span></a
+            ><span class="logo__web">Web</span><span class="logo__studio--footer">Studio</span></a
           >
           <address class="adress">
-            <ul class="adress-list list">
-              <li class="adress-item">
-                <a href="https://goo.gl/maps/33gtuHecfimrdce18" target="blank" class="location"
+            <ul class="adress__list list">
+              <li class="adres__item">
+                <a
+                  href="https://goo.gl/maps/33gtuHecfimrdce18"
+                  target="blank"
+                  class="adress__location"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="adress-item">
-                <a href="mailto:info@example.com" class="link">info@example.com</a>
+              <li class="adres__item">
+                <a href="mailto:info@example.com" class="adress__link link">info@example.com</a>
               </li>
-              <li class="adress-item">
-                <a href="tel:+380991111111+" class="link">+38 099 111 11 11</a>
+              <li class="adres__item">
+                <a href="tel:+380991111111+" class="adress__link link">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
+
         <div class="social-media">
           <h2 class="visually-hidden">социальные сети</h2>
-          <p class="join-title">присоединяйтесь</p>
-          <ul class="join-social-list list">
-            <li class="social-icon">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="20" height="20">
+          <p class="social-media__title footer-title">присоединяйтесь</p>
+          <ul class="social-media__list list">
+            <li class="social-media__icon">
+              <a href="" class="social-media__link link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-instagram-2"></use></svg
               ></a>
             </li>
-            <li class="social-icon">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-media__icon">
+              <a href="" class="social-media__link link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-media__icon">
+              <a href="" class="social-media__link link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon">
-              <a href="" class="social-link link">
-                <svg class="social-icon" width="20" height="20">
+            <li class="social-media__icon">
+              <a href="" class="social-media__link link">
+                <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
@@ -283,7 +291,7 @@
         </div>
 
         <form class="subscription">
-          <label for="sub-email" class="join-title">Подпишитесь на рассылку</label>>
+          <label for="sub-email" class="footer-title">Подпишитесь на рассылку</label>
           <div class="sub-wrap">
             <input
               type="email"
