--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo header__logo"
-            ><span class="logo__web">Web</span><span class="logo__studio">Studio</span>
+            >Web<span class="logo__studio">Studio</span>
           </a>
 
           <ul class="site-nav list">
@@ -36,7 +36,9 @@
               <a href="./index.html" class="site-nav__link link">Студия</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link link current">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav__link site-nav__link--current"
+                >Портфолио</a
+              >
             </li>
             <li class="site-nav__item"><a href="" class="site-nav__link link">Контакты</a></li>
           </ul>
@@ -230,58 +232,58 @@
     </main>
 
     <footer class="footer">
-      <div class="contact-wrap container">
-        <div class="contacts-bottom">
+      <div class="container footer__container">
+        <div class="footer-contacts">
           <h2 class="visually-hidden">адрес</h2>
           <a href="./index.html" class="logo"
-            ><span class="logo__web">Web</span><span class="logo__studio--footer">Studio</span></a
+            >Web<span class="logo__studio--footer">Studio</span></a
           >
-          <address class="adress">
-            <ul class="adress__list list">
-              <li class="adres__item">
+          <address class="footer-adress">
+            <ul class="footer-adress__list">
+              <li class="footer-adress__item">
                 <a
                   href="https://goo.gl/maps/33gtuHecfimrdce18"
                   target="blank"
-                  class="adress__location"
+                  class="footer-adress__location"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="adres__item">
-                <a href="mailto:info@example.com" class="adress__link link">info@example.com</a>
+              <li class="footer-adress__item">
+                <a href="mailto:info@example.com" class="footer-adress__link">info@example.com</a>
               </li>
-              <li class="adres__item">
-                <a href="tel:+380991111111+" class="adress__link link">+38 099 111 11 11</a>
+              <li class="footer-adress__item">
+                <a href="tel:+380991111111+" class="footer-adress__link">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
 
-        <div class="social-media">
+        <div class="footer-social">
           <h2 class="visually-hidden">социальные сети</h2>
-          <p class="social-media__title footer-title">присоединяйтесь</p>
-          <ul class="social-media__list list">
+          <p class="footer__title">присоединяйтесь</p>
+          <ul class="footer-social__list">
             <li class="social-media__icon">
-              <a href="" class="social-media__link link">
+              <a href="" class="footer-social__link">
                 <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-instagram-2"></use></svg
               ></a>
             </li>
             <li class="social-media__icon">
-              <a href="" class="social-media__link link">
+              <a href="" class="footer-social__link">
                 <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media__icon">
-              <a href="" class="social-media__link link">
+              <a href="" class="footer-social__link">
                 <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media__icon">
-              <a href="" class="social-media__link link">
+              <a href="" class="footer-social__link">
                 <svg class="social-media__icon" width="20" height="20">
                   <use href="./images/icon/symbol-defs.svg#icon-linkedin-1"></use>
                 </svg>
@@ -290,19 +292,19 @@
           </ul>
         </div>
 
-        <form class="subscription">
-          <label for="sub-email" class="footer-title">Подпишитесь на рассылку</label>
-          <div class="sub-wrap">
+        <form class="footer-subscription">
+          <label for="sub-email" class="footer__title">Подпишитесь на рассылку</label>
+          <div class="footer-subscription__wrap">
             <input
               type="email"
               name="sub-email"
-              class="sub-email"
+              class="footer-subscription__email"
               id="sub-email"
               placeholder="E-mail"
             />
-            <button type="submit" class="button sub-btn">
+            <button type="submit" class="button footer-subscription__btn">
               Подписаться
-              <svg class="sub-icon" width="24" height="24">
+              <svg class="footer-subscription__icon" width="24" height="24">
                 <use href="./images/icon/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
